--- a/libros/templates/libros/bool_detail.html
+++ b/libros/templates/libros/bool_detail.html
@@ -1,18 +1,17 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-  <h1>Title: {{ book.title }}</h1>
+  <h1>Title: {{ book.titulo }}</h1>
 
-  <p><strong>Author:</strong> <a href="">{{ book.author }}</a></p> <!-- author detail link not yet defined -->
-  <p><strong>Summary:</strong> {{ book.summary }}</p>
-  <p><strong>ISBN:</strong> {{ book.isbn }}</p> 
+  <p><strong>Autor:</strong> <a href="">{{ book.autor }}</a></p> <!-- author detail link not yet defined -->
+  <p><strong>descripcion:</strong> {{ book.descripcion }}</p>
   <p><strong>Language:</strong> {{ book.language }}</p>  
-  <p><strong>Genre:</strong> {% for genre in book.genre.all %} {{ genre }}{% if not forloop.last %}, {% endif %}{% endfor %}</p>  
+  <p><strong>Genero:</strong> {% for genero in book.genero.all %} {{ genero }}{% if not forloop.last %}, {% endif %}{% endfor %}</p>  
 
   <div style="margin-left:20px;margin-top:20px">
     <h4>Copies</h4>
 
-    {% for copy in book.bookinstance_set.all %}
+    {% for copy in book.Estado_libro.all %}
     <hr>
     <p class="{% if copy.status == 'a' %}text-success{% elif copy.status == 'm' %}text-danger{% else %}text-warning{% endif %}">{{ copy.get_status_display }}</p>
     {% if copy.status != 'a' %}<p><strong>Due to be returned:</strong> {{copy.due_back}}</p>{% endif %}
