se agregar pagina galeria y actualizacion de datos

--- a/libros/templates/galeria.html
+++ b/libros/templates/galeria.html
@@ -39,7 +39,7 @@
 </div>
 
         <div class="contenedor">
-            <h2>Libera tu imaginación</h2>
+            <h2>Libera tu imaginacón</h2>
             <p>La lectura abre mundos infinitos</p>
         </div>
     </section>
