--- a/libros/templates/galeria.html
+++ b/libros/templates/galeria.html
@@ -19,7 +19,7 @@
                     <nav class="menu">
                         <a class="nav-link" href="{% url 'index' %}">Inicio</a>
                         <a class="nav-link" href="{% url 'galeria' %}">Info libros</a>
-                        <a href="http://127.0.0.1:8000/admin/">admin</a>
+                        <a href="http://ribot.pythonanywhere.com/admin/login/?next=/admin/">admin</a>
                         <a class="nav-link" href="{% url 'formulario' %}">contacto</a>
                     </nav>
                 </div>
