--- a/libros/templates/index.html
+++ b/libros/templates/index.html
@@ -16,7 +16,7 @@
                     <nav class="menu">
                         <a class="nav-link" href="{% url 'index' %}">Inicio</a>
                         <a class="nav-link" href="{% url 'galeria' %}">Galeria</a>
-                        <a href="http://ribot.pythonanywhere.com/admin/login/?next=/admin/">admin</a>
+                        <a href="http://riboot.pythonanywhere.com/admin/login/?next=/admin/">admin</a>
                         <a class="nav-link" href="{% url 'formulario' %}">contacto</a>
                     </nav>
                 </div>
